@@ -1,16 +1,17 @@
-/* home page styles */
+/* home page styles and layout */
 div.logo {text-align: center; background-color: #eee; margin-top: 0.5em}
 div.logo img {margin-top: 0.3em}
 div.top {background-color: #eee; text-align: center; margin-top: 0.5em}
-div.body {display: block; /*margin-left: 20%; margin-right: 20%; /* border: .1em solid #c0c0c0*/}
+div.fill {margin-top: 0.5em; margin-bottom: 0; padding: 0}
+div.body {display: block}
 div.left {float: left; margin-top: 0; margin-right: 1.5em; max-width: 20%}
 div.navbar {background-color: #ffe; margin-top: 0; padding: 0.5em}
 div.right {float: right; margin-top: 0; margin-left: 1.5em; margin-right: 0; max-width: 20%}
 div.extra {border: thin solid black; background-color: white; margin-bottom: 0.5em; padding: 0.5em}
-div.extra:first-child {margin-top: 3.5em}
+div.fill+div.extra {margin-top: 0}
 div.extra *:first-child {margin-top: 0}
 div.bottom {clear: both}
-div.top h1 {margin-top: 0}
+div.top h1, div.fill h1 {margin-top: 0}
 div.navbar h2, div.extra h2, div.navbar h3, div.extra h3 {margin-bottom: 0}
 div.navbar ul, div.extra ul {margin-top: 0}
 p.version {text-align: center}
