@@ -25,7 +25,7 @@
     <hr />
 
     <p>Copyright © 2018 Free Software Foundation, Inc., 51 Franklin Street,
-    Fifth Floor, Boston, MA 02110-1301, USA.<br />Verbatim copying and
+    Fifth Floor, Boston, MA 02110-1301, USA. Verbatim copying and
     distribution of this entire article is permitted in any medium, provided
     this notice is preserved.</p>
 
