@@ -1,3 +1,8 @@
+2018-04-08         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* webTOC: Global rebuild of the home page.
+	* Development_web: Fix errata.
+
 2018-04-07         Manuel Collado       <m-collado@users.sourceforge.net>
 
 	* webTOC: Remove extra line.
